# Sunmait

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  hello.py  pyproject.toml  requirements.txt  service.py
.devcontainer/: devcontainer.json
.qodo/: history.sqlite
mlruns/0/: meta.yaml
mlruns/783430136068858026/: meta.yaml
mlruns/783430136068858026/02fbc478c6b240b0864b93a0276a1808/: meta.yaml
mlruns/783430136068858026/03a84ffaa7d245c88bfa7ba4519d0c28/: meta.yaml
mlruns/783430136068858026/071306bfb86a48c8a61533a52d285200/: meta.yaml
mlruns/783430136068858026/07759d11cf6b46b7b874a48d0c158154/: meta.yaml
mlruns/783430136068858026/094f82826c7a428d9145e7a256559f2a/: meta.yaml
mlruns/783430136068858026/0b61a6f077fe4aa1bb99e960ecde760e/: meta.yaml
mlruns/783430136068858026/0c44ad273a40422d9a0deca8d7ed8268/: meta.yaml
mlruns/783430136068858026/10859f1057fb49eda4dce57aaa91aec6/: meta.yaml
mlruns/783430136068858026/1128c3f4325d4295b9679b6d94244440/: meta.yaml
mlruns/783430136068858026/13febf947e014a5d8dd62f7720e81345/: meta.yaml
mlruns/783430136068858026/1722145e942e4249bb41bea394759f58/: meta.yaml
mlruns/783430136068858026/174d00a65bd7451ab24036e013928948/: meta.yaml
mlruns/783430136068858026/19daca47303b47179b46ff530baddd6d/: meta.yaml
mlruns/783430136068858026/1aa223e62ff44453bb63802006b2ebc9/: meta.yaml
mlruns/783430136068858026/1b1b6df9368b4194b137aaa3326e8070/: meta.yaml
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
tests/: test_service.py
(+1602 files in other folders)
