[project]
name = "sunmait"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "transformers>=4.48.3",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "coverage>=7.6.12",
    "pre-commit>=4.1.0",
]


