[project]
name = "sunmait"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.7",
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "mlcroissant>=1.0.13",
    "mlflow>=2.20.3",
    "optuna>=4.2.1",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pyqt5>=5.15.11",
    "pyqt6>=6.8.1",
    "pyside2>=5.15.2.1",
    "pytest>=8.3.4",
    "scikit-learn>=1.6.1",
    "shap>=0.46.0",
    "tk>=0.1.0",
    "torch>=2.6.0",
    "transformers>=4.48.3",
    "uvicorn>=0.34.0",
    "wget>=3.2",
    "ydata-profiling>=4.12.2",
]

[dependency-groups]
dev = [
    "coverage>=7.6.12",
    "pre-commit>=4.1.0",
]


